src/main/java/com/example/stream/spring/courses/reactive/example/model/error/InstructorServerError.java
package com.example.stream.spring.courses.reactive.example.model.error;

public record InstructorServerError() implements InstructorError {
}
